# hex_appeal

./: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html
.github/workflows/: release.yml  testing.yml
public/: site.webmanifest  styles.css
src/: color.rs  lib.rs  main.rs
src/color/: group.rs  mod.rs  mode.rs  rgb.rs
src/components/: contrast_badge.rs  contrast_table.rs  counter_btn.rs  del_button.rs  footer.rs  group.rs  header.rs  mod.rs  new_group.rs  swatch.rs  toggle.rs
src/pages/: home.rs  matrix.rs  mod.rs  not_found.rs  settings.rs
