[package]
name = "hex_appeal"
version = "1.0.0"
edition = "2021"
authors = [
	"Yuraima Estevez <yurm04@gmail.com>",
	"Dominik Wilkowski <hi@dominik-wilkowski.com>",
]


[dependencies]
leptos = { version = "0.8", features = ["csr"] }
leptos_meta = { version = "0.8" }
leptos_router = { version = "0.8" }
console_log = "1"
log = "0.4"
gloo-storage = "0.3"
serde = { version = "1", features = ["derive"] }
console_error_panic_hook = "0.1"
csscolorparser = "0.8"

[dev-dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3"
web-sys = { version = "0.3", features = ["Document", "Window"] }


[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = 1
incremental = true
codegen-units = 16
lto = false